test_cases/pass/p10.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i, j, k, count
count=0
FOR (i=0, i < 2, i=i+1)
START FOR
    FOR (j=0, j < 2, j=j+1)
    START FOR
        FOR (k=0, k < 2, k=k+1)
        START FOR
            count=count+1
        END FOR
    END FOR
END FOR
PRINT: count
END SCRIPT
