test_cases/fail/f36.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i
DECLARE CHAR c
c='A'
FOR (i=0, c, i=i+1)
START FOR
    PRINT: i
END FOR
END SCRIPT
